feat: add content container to position img and form with css grid.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <img>
+    <div class="content-container">
+        <img>
+        <div class="form-container">
+
+        </div>
+    </div>
+    
 </body>
 </html>
