feat: add form area with basic styling.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="content-container">
         <img>
         <div class="form-container">
-
+            <form>
+                
+            </form>
         </div>
     </div>
     
