feat: add blank form section with basic css positioning.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="content-container">
         <img>
+        <form>
+            
+        </form>
     </div>
     
 </body>
