feat: add alt text to form image.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content-container">
-        <img>
+        <img alt="Image of dense trees and fog, to white, sky.">
         <div class="form-container">
             <form action="#" method="post">
 
