Provided credit to form image with basic styling.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="content-container">
-        <img alt="Image of dense trees and fog, to white, sky.">
+        <div class="side-image">
+            <div class="credit">
+                <a href="https://unsplash.com/@cmreflections?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Clément M.</a> on <a href="https://unsplash.com/photos/photo-of-pine-trees-igX2deuD9lc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+            </div>
+        </div>
+
         <div class="form-container">
             <form action="#" method="post">
 
