feat: add logo and tagline to form image.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="content-container">
         <div class="side-image">
+            <div class="logo">
+                <img src="./img/JCLogov2.png">
+                <p class="tag-line">Brought to you by the Odin Project.</p>
+            </div>
             <div class="credit">
                 <a href="https://unsplash.com/@cmreflections?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Clément M.</a> on <a href="https://unsplash.com/photos/photo-of-pine-trees-igX2deuD9lc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             </div>
