feat: add extra styling to label and inputs

--- a/index.html
+++ b/index.html
@@ -21,30 +21,31 @@
         <div class="form-container">
             <form action="#" method="post">
 
-                <label for="first-name"> First Name
+                <label class="first-name-label" for="first-name"> FIRST NAME
                     <input type="text" id="first-name" placeholder="Thor">
                 </label>
 
-                <label for="last-name"> Last Name
+                <label for="last-name"> LAST NAME
                     <input type="text" id="last-name" Placeholder="Point Break">
                 </label>
 
-                <label for="email"> Email
+                <label for="email"> EMAIL
                     <input type="email" id="email" Placeholder="Point Break">
                 </label>
 
-                <label for="phone-number"> Phone Number
+                <label for="phone-number"> PHONE NUMBER
                     <input type="tel" id="phone-number" Placeholder="01695 579 146">
                 </label>
 
-                <label for="password"> Password
+                <label for="password"> PASSWORD
                     <input type="password" id="last-name">
                 </label>
 
-                <label for="password-confirm"> Confirm Password
+                <label for="password-confirm"> CONFIRM PASSWORD
                     <input type="password" id="password-confirm">
                 </label>
 
+                <button class="submit" type="submit">Create Account</button>
             </form>
         </div>
         
