feat: add valid and invalid pseudo classes to form input

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </label>
 
                 <label for="email"> EMAIL
-                    <input type="email" id="email" Placeholder="Point Break">
+                    <input type="email" id="email" Placeholder="thor@email.com">
                 </label>
 
                 <label for="phone-number"> PHONE NUMBER
