--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 </label>
 
                 <label for="last-name"> LAST NAME
-                    <input type="text" id="last-name" Placeholder="Point Break">
+                    <input type="text" id="last-name" Placeholder="Odinson">
                 </label>
 
                 <label for="email"> EMAIL
-                    <input type="email" id="email" Placeholder="thor@email.com">
+                    <input type="email" id="email" Placeholder="thorodinson@email.com">
                 </label>
 
                 <label for="phone-number"> PHONE NUMBER
@@ -38,7 +38,7 @@
                 </label>
 
                 <label for="password"> PASSWORD
-                    <input type="password" id="last-name">
+                    <input type="password" id="password">
                 </label>
 
                 <label for="password-confirm"> CONFIRM PASSWORD
