feat: change made to info section above form.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="info">
             <p>This is not a real online service! I'm just working my way through
                 The Odin Project curriculum.</p><br>
-            <p>Honestly, I struggled with the calculator
+            <p>While you're here, I struggled with the JS calculator
                 assignment because I tried to go at it in a complicated way. But then to
-                come back to straight forward CSS activities...</p><br>
-            <p>Well anyway, thanks for stopping by.</p>
+                overcome that and be met with straight forward CSS activities...</p><br>
+            <p>'If your boat's sails catch no wind, row.'</p>
         </div>
 
         <div class="form-container">
