feat: add already got an account button below form input with basic styling.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                 <button class="submit" type="submit">Create Account</button>
             </form>
         </div>
-        
+        <div class="log-in">
+            <a href="google.com">Already got an account?</a>
+        </div>
     </div>
 </body>
 </html>
