feat: change info content above form input.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="info">
             <p>This is not a real online service! I'm just working my way through
                 The Odin Project curriculum.</p><br>
-            <p>While you're here, I struggled with the JS calculator
-                assignment because I tried to go at it in a complicated way. But then to
-                overcome that and be met with straight forward CSS activities...</p><br>
+            <p>So, I struggled with the JS calculator
+                assignment because I tried to go at it in a complicated way. I
+                overcame that (woo!) only to be met with, just, CSS activities (not woo.)</p><br>
             <p>'If your boat's sails catch no wind, row.'</p>
         </div>
 
@@ -58,7 +58,7 @@
             </form>
         </div>
         <div class="log-in">
-            <a href="google.com">Already got an account?</a>
+            <a href="google.com">Already have an account?</a>
         </div>
     </div>
 </body>
