--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <p>This is not a real online service! I'm just working my way through
                 The Odin Project curriculum.</p><br>
             <p>So, I struggled with the JS calculator
-                assignment because I tried to go at it in a complicated way. I
+                assignment because I tried to tackle it in a complicated way. I
                 overcame that (woo!) only to be met with, just, CSS activities (not woo.)</p><br>
-            <p>'If your boat's sails catch no wind, row.'</p>
+            <p>'If your boat sails catch no wind, row.'</p>
         </div>
 
         <div class="form-container">
