feat: Javascript validation completed with HTML warning pop up.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </form>
         </div>
         <div class="log-in">
-            <a href="google.com">Already have an account?</a>
+            <a href="https://www.google.com">Already have an account?</a>
         </div>
     </div>
 </body>
