feat: add HTML form validation with required for name, email and password fields.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <form class="signup-form" action="./index.html" method="post">
 
                 <label class="first-name-label" for="first-name"> FIRST NAME *
-                    <input type="text" id="first-name" placeholder="Thor" requir>
+                    <input type="text" id="first-name" placeholder="Thor" required>
                 </label>
 
                 <label for="last-name"> LAST NAME
@@ -40,7 +40,7 @@
                 </label>
 
                 <label for="email"> EMAIL *
-                    <input type="email" id="email" Placeholder="thorodinson@email.com" requir>
+                    <input type="email" id="email" Placeholder="thorodinson@email.com" required>
                 </label>
 
                 <label for="phone-number"> PHONE NUMBER
@@ -48,11 +48,11 @@
                 </label>
 
                 <label for="password"> PASSWORD *
-                    <input type="password" id="password" class="password-input" requir>
+                    <input type="password" id="password" class="password-input" required>
                 </label>
 
                 <label for="password-confirm"> CONFIRM PASSWORD *
-                    <input type="password" id="password-confirm" class="password-confirm-input" requir>
+                    <input type="password" id="password-confirm" class="password-confirm-input" required>
                 </label>
 
                 <span class="input-notice"></span>
